--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "react-markdown": "^4.3.1",
     "react-share": "^4.3.0",
     "styled-components": "^5.2.0",
-    "uuid": "^7.0.0",
-    "xmlhttprequest-ssl": "^1.6.2"
+    "uuid": "^7.0.0"
   },
   "license": "apache",
   "main": "n/a",
